# devcode

./: .gitignore  CMakeLists.txt  README.md
WorknameProject/: Core.hpp  Entities.hpp  Scenes.hpp  main.cpp
WorknameProject/Core/include/: Animation.hpp  AnimationManager.hpp  BasicScene.hpp  Entity.hpp  EntityManager.hpp  GameSceneManager.hpp  Level.hpp  PlayerInterface.hpp
WorknameProject/Core/src/: Animation.cpp  AnimationManager.cpp  Entity.cpp  EntityManager.cpp  GameSceneManager.cpp  Level.cpp  PlayerInterface.cpp
WorknameProject/Entities/include/: AttackArea.hpp  Enemy.hpp  InteractiveHeal.hpp  Player.hpp  Unit.hpp
WorknameProject/Entities/src/: AttackArea.cpp  Enemy.cpp  InteractiveHeal.cpp  Player.cpp  Unit.cpp
WorknameProject/Scenes/include/: DemoLevel.hpp  MainMenu.hpp
WorknameProject/Scenes/src/: DemoLevel.cpp  MainMenu.cpp
WorknameProject/Textures/Levels/Demo/: Demo.tmx  DemoV2.tmx  DevoV2.tmx  Final.tmx  enemies.tmx  enemies.xml  floor.tmx
cmake_modules/: FindBox2D.cmake  FindTinyXML.cmake
